[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social-content"
version = "0.1.0"
description = "AI-powered social media content creation CLI"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
social = "social.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
